@@ -32,6 +32,7 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-10907] fixed remote command execution via SSH with no Zabbix agent interface (viktors)
 .......PS. [ZBX-6370] added ability to monitor SNMP devices returning OIDs in decreasing or mixed order (Andris)
 ..F....... [ZBX-10918] fixed severity filter in map.view action (Cemeris, Gunars)
 ..F....... [ZBX-10840] fixed selecting of group in popup page filter (Gunars)
